# replication-radar

./: CLAUDE.md  DEMO.md  LICENSE  README.md  STORY.md  demo_sdm.py  netlify.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: join-the-team.md
.github/workflows/: publish-pypi.yml
docs/: app-ui.md  link-types.md  next-layers-plan.md  openaire-mcp.md  readiness-scoring-plan.md
scripts/: build-team-index.mjs  build_verdicts.py
site/: README.md  app.js  curated.json  index.html  methodology.html  methodology.json  style.css  team.html  team.json  verdicts.json
site/bios/: anne-fouilloux.md  index.json  jean-iaquinta.md
src/replication_radar/: __init__.py  network.py  openaire.py  radar.py  server.py  verdicts.py
src/replication_radar/data/: verdicts.json
